Cleanup. Removing Kotlin entirely